--- a/home.html
+++ b/home.html
@@ -4,24 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>angular api</title>
+    <title>bootstrap</title>
+    <link rel="stylesheet" href="bootstrap libraries/css/bootstrap.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
-<div ng-controller="myCtr">
-    <table>
-        <tr>
-            <th>name</th>
-            <th>photo</th>
-        </tr>
-        <tr ng-repeat="user in users">
-            <td>{{user.login}}</td>
-            <td><img ng-src="{{user.avatar_url}}"</td>
-        </tr>
-    </table>
-</div>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.0/angular.min.js"></script>
-<script src="js/app.js"></script>
+ <div class="container"><!--space for margin left and right side-->
+    <form action="" method="get" class="form-group">
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+            <input type="text" class="form-control" placeholder="first name">
+        </div>
+        <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+            <input type="text" class="form-control" placeholder="last name">
+        </div>
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <input type="email" class="form-control" placeholder="email">
+        </div>
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <input type="tel" class="form-control" placeholder="phone number">
+        </div>
+        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+             <textarea name="" id="" cols="30" rows="30" class="form-control" placeholder="description"></textarea>
+        </div>
+        <div>
+            <input class="btn btn-success pull-right" type="submit" value="submit">
+        </div>
+    </form>
+</div><!--wrapper-->
 </body>
 </html>
